--- a/src/scss/themes/fylr/components/_pane.scss
+++ b/src/scss/themes/fylr/components/_pane.scss
@@ -25,6 +25,7 @@
 	flex-wrap: nowrap;
 	padding-left: 0;
 	padding-right: 0;
+	background-color: $body-bg;
 
 	// make all labels a subtitle by default
 	.cui-label {
